2009-03-07 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGServerEvent.m:
	Fix a bug (from rev.28036) and consolidate the computing of expose rectangle
	of subwindows.

2009-03-06 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGGLFormat.m:
	Missing var initialization.

2009-03-04 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGServerEvent.m,
	* Source/x11/XGGLContext.m,
	* Source/x11/XGGLFormat.m:
	Fix typo and oversights - Comes along with the previous changes.

2009-03-04 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGGLContext.m,
	* Source/x11/XGServerWindow.m,
	* Source/x11/XGServerEvent.m,
	* Source/win32/w32_GLcontext.m,
	* Source/win32/w32_windowdisplay.m,
	* Source/win32/WIN32Server.m:
	Two improvements related to OpenGL.
	1) prevent the backing store to be flushed after a call to [-drawRect:]
	(and fix a small bug is win32 window style)
	2) handle expose/paint events with retained/buffered backing store.

	* Source/x11/XGGLFormat.m,
	* Source/win32/w32_GLformat.m:
	Declare some new pixel format attributes.

	* Source/x11/XGGLContext.m,
	* Source/win32/w32_GLcontext.m:
	Undo Rev27944 related to NSRECT conversion.

2009-02-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGGLContext.m (XGXSubWindow -initWithView:visualInfo:):
	Set black background pixel.

2009-02-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGGLContext.m (XGXSubWindow -initWithView:visualInfo:)
	* Source/win32/w32_GLcontext.m (Win32Subwindow -initWithView:):
	Remove special code for different window border handling.

2009-02-11 Riccardo Mottola <rmottola@users.sf.net>

	* Source/win32/WIN32Server.m: Handle Alt-Gr (bug #25397)
	
2009-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerWindow.m: Minor fixes to compile with GC

2009-02-08  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (-titlewindow::, -docedited::): Add
	an asterisk before the window's title if its document is edited